feat: removido scheduler de syncfusion y agregado big calendar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+@import "../../node_modules/react-big-calendar/lib/css/react-big-calendar.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -75,17 +76,6 @@
   }
 }
 
-
-@import "../../node_modules/@syncfusion/ej2-base/styles/tailwind.css";
-@import "../../node_modules/@syncfusion/ej2-buttons/styles/tailwind.css";
-@import "../../node_modules/@syncfusion/ej2-calendars/styles/tailwind.css";
-@import "../../node_modules/@syncfusion/ej2-dropdowns/styles/tailwind.css";
-@import "../../node_modules/@syncfusion/ej2-inputs/styles/tailwind.css";
-@import "../../node_modules/@syncfusion/ej2-lists/styles/tailwind.css";
-@import "../../node_modules/@syncfusion/ej2-navigations/styles/tailwind.css";
-@import "../../node_modules/@syncfusion/ej2-popups/styles/tailwind.css";
-@import "../../node_modules/@syncfusion/ej2-splitbuttons/styles/tailwind.css";
-@import "../../node_modules/@syncfusion/ej2-react-schedule/styles/tailwind.css";
 
 #zappar-button {
 	position: absolute;
